Migrate to Spring Boot 4.0
Signed-off-by: Toshiaki Maki <makingx@gmail.com>